<resources>
    <!-- Warnings -->
    <string name="credentials_warning">Invalid credentials</string>
    <string name="used_username_warning">The username is taken</string>
    <string name="used_email_warning">The email is taken</string>
    <string name="group_error">Unable to fetch groups</string>

    <!-- Other -->
    <string name="app_name">INM5151</string>
    <string name="welcome">Welcome!</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="groups_title">Your groups</string>
    <string name="add_group">Add group</string>
    <string name="create_your_group">Create your group</string>
    <string name="group_name">Group name</string>
    <string name="invalid_group_name">Invalid group name</string>
    <string name="create">Create</string>
    <string name="settings">Settings</string>
    <string name="groups">Groups</string>
    <string name="invitations">Invitations</string>
    <string name="news">News</string>
    <string name="general">General</string>
    <string name="account">Account</string>
    <string name="general_settings">General Settings</string>
    <string name="account_settings">Account settings</string>
    <string name="games">Games</string>
    <string name="group_page">Group page</string>
    <string name="participants">Participants</string>
    <string name="ranking">Ranking</string>
    <string name="players">Players</string>
    <string name="invite_participant">Invite participant</string>
    <string name="user_page">User page</string>
    <string name="manage">Manage</string>
    <string name="user">User</string>
    <string name="invite">Invite</string>
    <string name="manage_user">Manage user</string>
    <string name="user_players">User players</string>
    <string name="homepage">Homepage</string>
    <string name="nhl_players">NHL Players</string>
    <string name="player_name">Player name</string>
    <string name="search">Search</string>
    <string name="player_pop_up">Player pop up</string>
    <string name="user_already_invited">User already invited</string>
    <string name="user_already_in_group">User already in the group</string>
    <string name="user_not_exist">User does not exist</string>
    <string name="invite_a_participant">Invite a participant</string>
    <string name="confirm_players">Confirm players</string>
    <string name="your_tradable_players">Your tradable players</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="nhl_news">NHL News</string>
</resources>