<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activityJava.LogIn"
    android:orientation="vertical">

    <TextView
        android:id="@+id/sign_up_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:layout_gravity="center"
        android:text="@string/sign_up"/>

    <TextView
        android:id="@+id/missing_username_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:text="@string/credentials_warning"
        android:textColor="@color/red"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/used_username_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-20dp"
        android:layout_gravity="center"
        android:text="@string/used_username_warning"
        android:textColor="@color/red"
        android:visibility="invisible"/>

    <EditText
        android:id="@+id/sign_up_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textVisiblePassword"
        android:maxLength="17"
        android:drawableLeft="@drawable/ic_username"
        android:drawableStart="@drawable/ic_username"
        android:background="@drawable/custom_text"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>

    <TextView
        android:id="@+id/missing_email_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:text="@string/credentials_warning"
        android:textColor="@color/red"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/used_email_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-20dp"
        android:layout_gravity="center"
        android:text="@string/used_email_warning"
        android:textColor="@color/red"
        android:visibility="invisible"/>

    <EditText
        android:id="@+id/sign_up_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLength="40"
        android:drawableLeft="@drawable/ic_email"
        android:drawableStart="@drawable/ic_email"
        android:background="@drawable/custom_text"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />

    <TextView
        android:id="@+id/missing_password_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/credentials_warning"
        android:textColor="@color/red"
        android:visibility="invisible"/>

    <EditText
        android:id="@+id/sign_up_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLength="25"
        android:drawableLeft="@drawable/ic_password"
        android:drawableStart="@drawable/ic_password"
        android:background="@drawable/custom_text"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_gravity="center"
        android:text="@string/sign_up"/>

</LinearLayout>