<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/create_group_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:layout_gravity="center"
        android:text="@string/create_your_group"/>

    <TextView
        android:id="@+id/create_group_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:text="Invalid group settings"
        android:textColor="@color/red"
        android:visibility="invisible"/>

    <EditText
        android:id="@+id/create_group_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:autofillHints=""
        android:background="@drawable/custom_text"
        android:drawableStart="@drawable/ic_group_name"
        android:drawableLeft="@drawable/ic_group_name"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/group_name"
        android:maxLength="17"
        android:inputType="textVisiblePassword"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/create_group_goalpts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:autofillHints=""
        android:background="@drawable/custom_text"
        android:ems="10"
        android:drawableStart="@drawable/ic_baseline_sports_hockey_24"
        android:drawableLeft="@drawable/ic_baseline_sports_hockey_24"
        android:hint="Points / goals"
        android:drawablePadding="5dp"
        android:maxLength="17"
        android:inputType="textVisiblePassword"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/create_group_passpts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:autofillHints=""
        android:background="@drawable/custom_text"
        android:ems="10"
        android:hint="points / assists"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/ic_baseline_sports_hockey_24"
        android:drawableLeft="@drawable/ic_baseline_sports_hockey_24"
        android:maxLength="17"
        android:inputType="textVisiblePassword"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/create_group_prize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:autofillHints=""
        android:background="@drawable/custom_text"
        android:ems="10"
        android:hint="Winner's Prize"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/ic_baseline_sports_bar_24"
        android:drawableLeft="@drawable/ic_baseline_sports_bar_24"
        android:maxLength="17"
        android:inputType="textVisiblePassword"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        tools:ignore="RtlSymmetry" />


    <Button
        android:id="@+id/create_group_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:text="@string/create" />

</LinearLayout>